Fixing side nav and files spacing (#24)
* side nav spacing fixed

* files spacing fixed

---------

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,5 @@ html, body {
   height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow-y: hidden;
 }
