--- a/src/styles/file/shared-styles.css
+++ b/src/styles/file/shared-styles.css
@@ -1,5 +1,7 @@
 .text-area-container {
   width: 100%;
-  height: 200px;
-  margin-top: 10px;
+  padding-top: 12px;
+  height: 210px;
+  max-height: 210px;
+  overflow-y: auto;
 }
